src/test/ui/async-await/no-const-async.stderr
<<<<<<< HEAD   (086005 Importing rustc-1.38.0)
error: expected identifier, found reserved keyword `async`
  --> $DIR/no-const-async.rs:7:11
   |
LL | pub const async fn x() {}
   |           ^^^^^ expected identifier, found reserved keyword
help: you can escape reserved keywords to use them as identifiers
   |
LL | pub const r#async fn x() {}
   |           ^^^^^^^

error: expected `:`, found keyword `fn`
  --> $DIR/no-const-async.rs:7:17
=======
error: expected identifier, found keyword `async`
  --> $DIR/no-const-async.rs:5:11
   |
LL | pub const async fn x() {}
   |           ^^^^^ expected identifier, found keyword
help: you can escape reserved keywords to use them as identifiers
   |
LL | pub const r#async fn x() {}
   |           ^^^^^^^

error: expected `:`, found keyword `fn`
  --> $DIR/no-const-async.rs:5:17
>>>>>>> BRANCH (8cd2c9 Importing rustc-1.39.0)
   |
LL | pub const async fn x() {}
   |                 ^^ expected `:`

error: aborting due to 2 previous errors

